POST release deferred cleanup